# dreamervm

./: Cargo.toml  README.md
src/: cli.rs  cmd.rs  main.rs
src/common/: types.rs
src/core/: code.rs  instruction.rs  machine.rs  memory.rs  mod.rs  stack.rs  state.rs
