[package]
name = "dreamervm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.6", features = ["derive"] }
serde = { version = "1.0.133", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.74"
